<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_food_doodles_bg"
    android:orientation="vertical"
    tools:context=".fragments.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/listitem_background"
            android:elevation="4dp"
            android:padding="30dp"
            android:src="@drawable/left_arrow_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="80dp">

            <ImageView
                android:id="@+id/iv_product_img"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/image_background"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                android:scaleType="centerInside" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:background="@drawable/product_details_layout_background"
                android:elevation="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/btn_reduce_amount"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/ic_remove" />

                    <TextView
                        android:id="@+id/tv_product_amount"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/btn_increase_amount"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/ic_add" />


                </LinearLayout>

                <TextView
                    android:id="@+id/et_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/saucegrotesksemibold"
                    android:gravity="center"
                    android:text="Beef Burger"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.059"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_product_name"
                    app:layout_constraintVertical_bias="0.04">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/calories_flame" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/saucegroteskregular"
                        android:textSize="20sp"
                        tools:text="150 Kcal" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_product_name"
                    app:layout_constraintVertical_bias="0.165">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ready_time_alarm_clock" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_ready_in_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/saucegroteskregular"
                        android:textSize="20sp"
                        tools:text="@string/ready_in_minutes" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.935"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                    app:layout_constraintVertical_bias="0.111">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"
                        android:textColor="@color/green_yellow_dark"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="2dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="6.59"
                        android:textColor="@color/black"
                        android:textSize="32dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/et_product_desription"
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/saucegroteskregular"
                    android:gravity="left|center"
                    android:maxLines="3"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.439"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
                    app:layout_constraintVertical_bias="0.472"
                    tools:text="@string/des_text" />

                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/button_background"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>


    <!--

        <Toolbar
            android:id="@+id/products_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_food"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.084" />


            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_image"
                app:layout_constraintVertical_bias="0.076"
                tools:text="product name" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name"
                app:layout_constraintVertical_bias="0.054"
                tools:text="liked by: " />



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="432dp"
                android:gravity="start"
                android:text="Energetic value and nutrients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.045">

                <TextView
                    android:id="@+id/tv_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:alpha="0.7"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    tools:text="nutrition" />

                <TextView
                    android:id="@+id/tv_fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:alpha="0.7"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    tools:text="nutrition" />

                <TextView
                    android:id="@+id/tv_proteins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:alpha="0.7"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    tools:text="nutrition" />

                <TextView
                    android:id="@+id/tv_carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:alpha="0.7"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    tools:text="nutrition" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/ic_basket"
                android:text="Add to basket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:background="@color/white"
                android:src="@drawable/ic_favorite_blank"
                android:tag="notFavorited"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.573"
                app:layout_constraintStart_toEndOf="@+id/button" />

        </androidx.constraintlayout.widget.ConstraintLayout>-->